--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sid093.GitHub.io : The Waiting Room">
+    <meta name="description" content="The Waiting Room">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Sid093.GitHub.io</title>
+    <title>The Waiting Room</title>
   </head>
 
   <body>
