--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="" /><!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Instaview - https://github.com/sid093/instaview</p>
+                                    <p class="mb-5"><a href='https://github.com/sid093/instaview'>Instaview</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
